add tweaks to the index file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       <div class="col-md"> <!--Master Column -->
         <div class="row p-3 mb-2 bg-info text-white">
-            <h1 class="display-4">Your Window to Wealth!</h1>
+            <h1 class="display-4">Get Some of that Sweet VC Money!</h1>
         </div>
 
         <div class="row"> <!-- Body Row -->
@@ -23,8 +23,9 @@
                     <h4 class="alert-heading"><span class="firstName"></span> <span class="lastName"></span> you are on the path to success!</h4>
                     <hr>
                     <p><span class="firstName"></span>, your path to riches lies in our <span class="program"></span> program.</p> 
-                    <p>Entrance is limited to 15 motivated individuals in the <span class="term"></span> term. You are required make an initial deposit of $1000.00 in seven days time to secure your spot. An email will be sent to <span class="email"></span> with an invoice for tuition.</p>
-                    <a href="index.html" class="btn btn-success btn-sm" role="button" aria-pressed="true"> $ Enroll Today! $</a>
+                    <p>Entrance is limited to 15 motivated individuals in the <span class="term"></span> term.</p> 
+                    <p>You are required make an initial deposit of $1000.00 in seven days time to secure your spot. An email will be sent to <span class="email"></span> with an invoice for tuition.</p>
+                    <a href="index.html" class="btn btn-success btn-sm" role="button" aria-pressed="true"> Enroll Today!</a>
                 </div>
                 
             </div> <!-- End Hidden Div -->
@@ -57,10 +58,10 @@
                                 <input type="email" class="form-control" id="email" placeholder="Email">
                             </div>
                             <div class="form-group">
-                                <label for="income">How much would you like to be making?</label>
+                                <label for="income">How much would you like to be earning?</label>
                                 <select class="form-control" id="income">
-                                <option value="1">Dirt Poor</option>
-                                <option value="2">Getting By</option>
+                                <option value="1">Enough to sill be poor</option>
+                                <option value="2">Just gettin' by</option>
                                 <option value="3">Content with my income</option>
                                 <option value="4">Stupidly Wealthy</option>
                                 </select>
@@ -68,10 +69,10 @@
                             <div class="form-group">
                                 <label for="math">Are you adept at mathematics?</label>
                                 <select class="form-control" id="math">
-                                <option value="1">Basic arithmetic</option>
+                                <option value="1">Basic Arithmetic</option>
                                 <option value="2">High School Algebra</option>
-                                <option value="3">I know some statistics</option>
-                                <option value="4">I have a graduate degree in Math</option>
+                                <option value="3">Introductory statistics</option>
+                                <option value="4">Graduate degree in Math</option>
                                 </select>
                             </div>
                             <div class="form-group">
