--- a/index.html
+++ b/index.html
@@ -119,9 +119,12 @@
                 <div class="alert alert-success col-12" role="alert">
                     <h4 class="alert-heading"><span class="firstName"></span> <span class="lastName"></span> you are on the path to success!</h4>
                     <hr>
-                    <p><span class="firstName"></span>, your path to riches lies in our <span class="program"></span> program.</p> 
-                    <p>Entrance is limited to 15 motivated individuals in the <span class="term"></span> term.</p> 
-                    <p>An email will be sent to <span class="email"></span> with an invoice for tuition. You are required make an initial deposit of $1000.00 in seven days time to secure your spot.</p>
+                    <p><span class="firstName"></span>, your path to riches lies in our <span class="program"></span> program.</p>
+                    <ul> 
+                        <li>Entrance is limited to 15 motivated individuals in our <span class="term"></span> term.</li> 
+                        <li>An email will be sent to <span class="email"></span> with an invoice for tuition.</li> 
+                        <li>You are required make an initial deposit of $1000.00 in seven days time to secure your spot.</li>
+                    </ul>
                     <a href="index.html" class="btn btn-success btn-sm" role="button" aria-pressed="true"> Enroll Today!</a>
                 </div>
                 
