make minor changes to copy of index file and added jquery animation to divs.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 <h3>Potential Students:</h3>
                                 <p><strong>Have you ever longed for a job in the tech sector?</strong> A chance to roll the dice and get rich selling your Pinterest clone? I hear you, <em>who doesn't want all of that and more!</em></p>
                                 <p>    
-                                <strong>Take the quick survey on the right</strong> and with the help of our team of data scientists we will determine <mark>your optimal path to wealth</mark> beyond your wildest dreams. Prepare for awkward dinners with Zuck, overpriced hoodies, and unfounded (<em>we hope</em>) discrimination law suits! The world is yours...as long as the highly-targeted advertising model isn't disrupted.</p>
+                                <strong>Take the quick survey on the right</strong> and with the help of our team of data scientists we will determine <mark>your optimal path to wealth</mark> beyond your wildest dreams. Prepare for awkward dinners with Zuck, overpriced hoodies, and unfounded (<em>we hope</em>) discrimination law suits! The world is yours...as long as business model of highly-targeted advertising isn't disrupted.</p>
                                 <img src="img/money.jpeg" alt="Nature" class="image">
                             </div>  
                         </div> 
